test/1.2/errors/T_EAINCOMP.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;

group b0 {
    /// ERROR EAINCOMP
    group r0[i in 0..1];
    /// ERROR EAINCOMP
    group r0[j in 0..1];
}

group b1 {
    /// ERROR EAINCOMP
    group r1[i in 0..1];
    /// ERROR EAINCOMP
    group r1[i in 0..2];
}

group b2 {
    /// ERROR EAINCOMP
    group r2[2];
    /// ERROR EAINCOMP
    group r2;
}
